# time-deposit-take-home-kata

./: .gitignore  README.md
ai/: README.md
ai/agents/: jd-fix-agent.md  jd-judge-a.md  jd-judge-b.md  review-readability.md  review-refuter.md  review-reliability.md  review-resilience.md  review-risk.md  sdd-apply.md  sdd-archive.md  sdd-design.md  sdd-explore.md  sdd-init.md  sdd-onboard.md  sdd-propose.md  sdd-spec.md  sdd-tasks.md  sdd-verify.md
ai/skills/sdd-workflow/: sdd-orchestrator-workflow.md
docs/: brief-traceability.md
python/: Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  time_deposit.py
python/adapters/inbound/http/: app.py  deps.py  routers.py  schemas.py
python/adapters/outbound/postgres/: db.py  models.py  repository.py  schema.sql  seed.sql
python/application/: list_deposits.py  read_models.py  update_balances.py
python/domain/: interest_strategies.py  time_deposit.py  withdrawal.py
python/ports/: time_deposit_repository.py
python/tests/integration/: test_postgres_repository.py
python/tests/unit/: fake_repository.py  test_api_endpoints.py  test_characterization.py  test_interest_strategies.py  test_list_deposits_use_case.py  test_update_balances_use_case.py
