[project]
name = "time-deposit"
version = "0.1.0"
description = "Time deposit interest calculation service (hexagonal FastAPI + PostgreSQL)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.2",
    "pydantic>=2.9",
]

[tool.uv]
package = false

[dependency-groups]
dev = [
    "pytest>=8.3",
    "testcontainers[postgres]>=4.8",
    "httpx>=0.27",
]

[tool.pytest.ini_options]
testpaths = ["tests", "test_time_deposit.py"]
pythonpath = ["."]
python_files = ["test_*.py"]
markers = [
    "integration: integration tests requiring Docker (testcontainers)",
]
